GearsetPOC/force-app/main/default/objects/SalesforceMemberChangedTier__x/SalesforceMemberChangedTier__x.object-meta.xml
<CustomObject>
    <description>SalesforceMemberChangedTier</description>
    <externalDataSource>ICLP</externalDataSource>
    <externalName>SalesforceMemberChangedTier</externalName>
    <label>SalesforceMemberChangedTier</label>
    <pluralLabel>SalesforceMemberChangedTier</pluralLabel>
</CustomObject>