GearsetPOC/force-app/main/default/objects/SalesforceMemberChangedTier__x/fields/MemberCard__c.field-meta.xml
<CustomField>
    <fullName>MemberCard__c</fullName>
    <description>MemberCard</description>
    <externalDeveloperName>MemberCard</externalDeveloperName>
    <label>MemberCard</label>
    <length>128</length>
    <type>Text</type>
</CustomField>