GearsetPOC/force-app/main/default/objects/SalesforceMemberChangedTier__x/fields/MembershipExpiry__c.field-meta.xml
<CustomField>
    <fullName>MembershipExpiry__c</fullName>
    <description>MembershipExpiry__c field is created only on SF side for parsing reasons</description>
    <inlineHelpText>MembershipExpiry__c field is created only on SF side for parsing reasons</inlineHelpText>
    <label>MembershipExpiry</label>
    <type>DateTime</type>
</CustomField>