GearsetPOC/force-app/main/default/objects/SalesforceMemberChangedTier__x/fields/NumberOfTrips__c.field-meta.xml
<CustomField>
    <fullName>NumberOfTrips__c</fullName>
    <description>NumberOfTrips</description>
    <externalDeveloperName>NumberOfTrips</externalDeveloperName>
    <label>NumberOfTrips</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>