GearsetPOC/force-app/main/default/objects/SalesforceMemberChangedTier__x/fields/RegistrationDate__c.field-meta.xml
<CustomField>
    <fullName>RegistrationDate__c</fullName>
    <description>RegistrationDate</description>
    <externalDeveloperName>RegistrationDate</externalDeveloperName>
    <label>RegistrationDate</label>
    <type>DateTime</type>
</CustomField>