GearsetPOC/force-app/main/default/objects/SalesforceMemberChangedTier__x/fields/RewardPointsBalance__c.field-meta.xml
<CustomField>
    <fullName>RewardPointsBalance__c</fullName>
    <description>RewardPointsBalance</description>
    <externalDeveloperName>RewardPointsBalance</externalDeveloperName>
    <label>RewardPointsBalance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>