GearsetPOC/force-app/main/default/objects/SalesforceMemberChangedTier__x/fields/SalesforceId__c.field-meta.xml
<CustomField>
    <fullName>SalesforceId__c</fullName>
    <description>SalesforceId</description>
    <externalDeveloperName>SalesforceId</externalDeveloperName>
    <label>SalesforceId</label>
    <length>128</length>
    <type>Text</type>
</CustomField>