GearsetPOC/force-app/main/default/objects/SalesforceMemberChangedTier__x/fields/StatusChangeDate__c.field-meta.xml
<CustomField>
    <fullName>StatusChangeDate__c</fullName>
    <description>StatusChangeDate</description>
    <externalDeveloperName>StatusChangeDate</externalDeveloperName>
    <label>StatusChangeDate</label>
    <type>DateTime</type>
</CustomField>