GearsetPOC/force-app/main/default/objects/SalesforceMemberChangedTier__x/fields/StatusPointsBalance__c.field-meta.xml
<CustomField>
    <fullName>StatusPointsBalance__c</fullName>
    <description>StatusPointsBalance</description>
    <externalDeveloperName>StatusPointsBalance</externalDeveloperName>
    <label>StatusPointsBalance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>