GearsetPOC/force-app/main/default/objects/SalesforceMemberChangedTier__x/fields/SubTierCode__c.field-meta.xml
<CustomField>
    <fullName>SubTierCode__c</fullName>
    <description>SubTierCode</description>
    <externalDeveloperName>SubTierCode</externalDeveloperName>
    <label>SubTierCode</label>
    <length>128</length>
    <type>Text</type>
</CustomField>