GearsetPOC/force-app/main/default/objects/SalesforceMemberChangedTier__x/fields/TierCode__c.field-meta.xml
<CustomField>
    <fullName>TierCode__c</fullName>
    <description>TierCode</description>
    <externalDeveloperName>TierCode</externalDeveloperName>
    <label>TierCode</label>
    <length>128</length>
    <type>Text</type>
</CustomField>